feature5 #tab3 and unit test done

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,4 +1,6 @@
 {
   "tab1.hotel": "HOTEL",
-  "tab1.hoteldealcard.radiotext": "Elegir régimen"
+  "tab1.hoteldealcard.radiotext": "Elegir régimen",
+  "tab2.drinks": "Bebidas",
+  "tab2.beers": "Cervezas"
 }
